<resources>
    <string name="app_name">Lista de Contatos Telefônicos</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="novo_usuario">Novo Usuário</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="salvar">Salvar</string>
    <string name="nome_do_contato">Nome do Contato</string>
    <string name="telefone">Telefone</string>
    <string name="novo_contato">Novo Contato</string>
    <string name="apelido">Apelido</string>
    <string name="nome">Nome</string>

    <string name="passwNotEqual">Senhas não são idênticas</string>
    <string name="userCreated">Usuário Criado com Sucesso!</string>
    <string name="userAlreadyCreated">Usuário já existe</string>
    <string name="emptyData">Algum dado não foi preenchido</string>
    <string name="userNotFound">Usuário/Senha inválido</string>
    <string name="contactSaved">Contato salvo com Sucesso!</string>
    <string name="nicknameAlreadySaved">Usuário já possui Contato com esse Apelido</string>
    <string name="NoSuchAlgorithmException">NoSuchAlgorithmException</string>
    <string name="nome_contato">Nome Contato</string>
</resources>